tests/expectations/compiler/array/bad_repeat_count_fail.out
Error [ETYC0372008]: The value 111111111111111 is not a valid `u8`
    --> compiler-test:3:24
     |
   3 |         let a = [1u32; 111111111111111u8]; // overflow
     |                        ^^^^^^^^^^^^^^^^^
Error [ETYC0372008]: The value 111111111111111 is not a valid `u32`
    --> compiler-test:4:24
     |
   4 |         let b = [1u32; 111111111111111]; // overflow
     |                        ^^^^^^^^^^^^^^^
Error [ETYC0372077]: An array cannot have more than 32 elements, found one with 100 elements
    --> compiler-test:6:17
     |
   6 |         let d = [1u32; 100u128]; // passes limits
     |                 ^^^^^^^^^^^^^^^
Error [ETYC0372077]: An array cannot have more than 32 elements, found one with 100 elements
    --> compiler-test:7:17
     |
   7 |         let e = [1u32; 100]; // passes limits
     |                 ^^^^^^^^^^^
